--- a/src/components/PokemonDetails/PokemonDetails.css
+++ b/src/components/PokemonDetails/PokemonDetails.css
@@ -1,15 +1,20 @@
+.message {
+  font-size: 2rem;
+  color: #777;
+}
+
 .pokemon-details {
   padding: 2em;
   flex: 1;
-  width: 100%;
+  color: #444;
 }
 .pokemon-container {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  max-height: 100%;
 }
 
 .pokemon-name {
@@ -17,8 +22,25 @@
   text-align: center;
   font-size: 2rem;
   font-weight: bold;
+  color: #444;
 }
 
-.pokemon-image {
-  width: 60%;
+.pokemon-container h3 {
+  margin-top: 1em;
+  color: #ee1717;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.pokemon-types,
+.pokemon-abilities {
+  display: flex;
+  flex-direction: row;
+}
+
+.pokemon-types li,
+.pokemon-abilities li {
+  margin: 0em 1em;
 }
