Small improvements to style

--- a/src/components/PokemonImage/PokemonImage.css
+++ b/src/components/PokemonImage/PokemonImage.css
@@ -5,7 +5,7 @@
 }
 
 .pokemon-image {
-  height: 400px;
-  width: 400px;
-  object-fit: contain;
+  height: 100%;
+  width: 100%;
+  object-fit: scale-down;
 }
